Create dynamic card generation for weekly summary

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<html data-theme="light"></html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +8,10 @@
 </head>
 <body>
   <!--Header w/ zip and location-->
-  <div class="flex justify-between">
+  <div class="flex justify-between bg-neutral text-neutral-content">
     <div class="flex justify-start gap-4 border border-black">
-      <select data-choose-theme>
+      <div>Theme:</div>
+      <select id="theme-select" data-choose-theme class="bg-neutral text-neutral-content">
         <option value="light">Light</option>
         <option value="dark">Dark</option>
         <option value="cupcake">Cupcake</option>
@@ -29,32 +29,17 @@
       <div class="mr-3">ZIP</div>
     </div>
   </div>
-  <!--Weather Summary-->
-  <div class="flex border border-black gap-5">
-    <div>
-      <div>Precipitation</div>
-      <div>High</div>
-      <div class="text-transparent">Clouds</div>
-      <div>Low</div>
-      <div class="text-transparent">Date</div>
-    </div>
-    <div>
-      <div>0in</div>
-      <div>63</div>
-      <div>Clouds</div>
-      <div>48</div>
-      <div>Mon 6/1</div>
-    </div>
-  </div>
+  <!--Weather Summary Container-->
+  <div id="weekly-summary-container" class="flex border border-black gap-5 bg-base-300 text-base-content"></div>
   <!--Weather Cards by Individual Day-->
-  <div class="flex flex-col border border-black">
+  <div class="flex flex-col border border-black bg-base-100 text-base-content">
     <div class="flex flex-col gap-3 border border-black">
       <div class="flex justify-between">
         <div>
-          <div>Mon 5</div>
+          <div class="bg-primary text-primary-content">Mon 5</div>
           <div>Partly Cloudy</div>
         </div>
-        <div class="flex gap-3">
+        <div class="flex gap-3 bg-primary text-primary-content">
           <div>Feels Like</div>
           <div>62/46</div>
         </div>
@@ -73,13 +58,13 @@
       </div>
     </div>
 
-    <div class="flex flex-col gap-3 border border-black">
+    <div class="flex flex-col gap-3 border border-black bg-base-200 text-base-content">
       <div class="flex justify-between">
         <div>
-          <div>Mon 5</div>
+          <div class="bg-secondary text-secondary-content">Tues 6</div>
           <div>Partly Cloudy</div>
         </div>
-        <div class="flex gap-3">
+        <div class="flex gap-3 bg-secondary text-secondary-content">
           <div>Feels Like</div>
           <div>62/46</div>
         </div>
@@ -99,6 +84,5 @@
     </div>
 
   </div>
-  <script src="main.js"></script>
 </body>
 </html>
